--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto_Final_CV</title>
     <link rel="icon" type="imagen/x-icon" href="/Recursos/icono2.ico">
-    <link rel="stylesheet" type="text/CSS" href="/estilos.css">
+    <link rel="stylesheet" type="text/CSS" href="estilos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
@@ -282,6 +282,6 @@
         </div>
         <div id="fila4" class="row"></div>
     </div>
-    <script src="/funcionalidades.js"></script>
+    <script src="funcionalidades.js"></script>
 </body>
 </html>
