saco barra de las imagenes

--- a/index.html
+++ b/index.html
@@ -59,48 +59,48 @@
                                 <td>- FRONTEND</td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="css" src="/Recursos/css-3.png" alt="imagen CSS" class="imagenProgramas">&nbsp CSS</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="css" src="Recursos/css-3.png" alt="imagen CSS" class="imagenProgramas">&nbsp CSS</td>
+                                <td>&nbsp &nbsp<img src="Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="html5" src="/Recursos/html-5.png" alt="imagen HTML" class="imagenProgramas">&nbsp HTML</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="html5" src="Recursos/html-5.png" alt="imagen HTML" class="imagenProgramas">&nbsp HTML</td>
+                                <td>&nbsp &nbsp<img src="Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="JS" src="/Recursos/JS.png" alt="imagen JavaScript" class="imagenProgramas">&nbsp JS</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="JS" src="Recursos/JS.png" alt="imagen JavaScript" class="imagenProgramas">&nbsp JS</td>
+                                <td>&nbsp &nbsp<img src="Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="bootstrap" src="/Recursos/bootstrap.png" alt="imagen Bootstrap" class="imagenProgramas">&nbsp BOOTSTRAP</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="bootstrap" src="Recursos/bootstrap.png" alt="imagen Bootstrap" class="imagenProgramas">&nbsp BOOTSTRAP</td>
+                                <td>&nbsp &nbsp<img src="Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="react" src="/Recursos/react.png" alt="imagen React" class="imagenProgramas">&nbsp REACT</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="react" src="Recursos/react.png" alt="imagen React" class="imagenProgramas">&nbsp REACT</td>
+                                <td>&nbsp &nbsp<img src="Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr><td>&nbsp</td></tr>
                             <tr>
                                 <td>- BACKEND</td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="python" src="/Recursos/python.png" alt="imagen Phyton" class="imagenProgramas">&nbsp PYTHON</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="python" src="Recursos/python.png" alt="imagen Phyton" class="imagenProgramas">&nbsp PYTHON</td>
+                                <td>&nbsp &nbsp<img src="Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="java" src="/Recursos/java.png" alt="imagen Java" class="imagenProgramas">&nbsp JAVA</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/80.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="java" src="Recursos/java.png" alt="imagen Java" class="imagenProgramas">&nbsp JAVA</td>
+                                <td>&nbsp &nbsp<img src="Recursos/80.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="php" src="/Recursos/php.png" alt="imagen PHP" class="imagenProgramas">&nbsp PHP</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="php" src="Recursos/php.png" alt="imagen PHP" class="imagenProgramas">&nbsp PHP</td>
+                                <td>&nbsp &nbsp<img src="Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="ruby" src="/Recursos/ruby.png" alt="imagen Ruby" class="imagenProgramas">&nbsp RUBY</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/80.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="ruby" src="Recursos/ruby.png" alt="imagen Ruby" class="imagenProgramas">&nbsp RUBY</td>
+                                <td>&nbsp &nbsp<img src="Recursos/80.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="laravel" src="/Recursos/laravel.png" alt="imagen Laravel" class="imagenProgramas">&nbsp LARAVEL</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/70.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="laravel" src="Recursos/laravel.png" alt="imagen Laravel" class="imagenProgramas">&nbsp LARAVEL</td>
+                                <td>&nbsp &nbsp<img src="Recursos/70.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
                                 <td>&nbsp</td>
@@ -109,24 +109,24 @@
                                 <td>- DATABASE</td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="sql" src="/Recursos/sql.png" alt="imagen SQL" class="imagenProgramas">&nbsp SQL</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="sql" src="Recursos/sql.png" alt="imagen SQL" class="imagenProgramas">&nbsp SQL</td>
+                                <td>&nbsp &nbsp<img src="Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="mysql" src="/Recursos/mysql.png" alt="imagen MySQL" class="imagenProgramas">&nbsp MYSQL</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="mysql" src="Recursos/mysql.png" alt="imagen MySQL" class="imagenProgramas">&nbsp MYSQL</td>
+                                <td>&nbsp &nbsp<img src="Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="postgre" src="/Recursos/postgre.png" alt="imagen Postgre" class="imagenProgramas">&nbsp POSTGRE</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="postgre" src="Recursos/postgre.png" alt="imagen Postgre" class="imagenProgramas">&nbsp POSTGRE</td>
+                                <td>&nbsp &nbsp<img src="Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="mongoDB" src="/Recursos/mongoDB.png" alt="imagen mongoDB" class="imagenProgramas">&nbsp mongoDB</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/80.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="mongoDB" src="Recursos/mongoDB.png" alt="imagen mongoDB" class="imagenProgramas">&nbsp mongoDB</td>
+                                <td>&nbsp &nbsp<img src="Recursos/80.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="oracle" src="/Recursos/oracle.png" alt="imagen Oracle" class="imagenProgramas">&nbsp ORACLE</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/80.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="oracle" src="Recursos/oracle.png" alt="imagen Oracle" class="imagenProgramas">&nbsp ORACLE</td>
+                                <td>&nbsp &nbsp<img src="Recursos/80.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
                                 <td>&nbsp</td>
@@ -135,16 +135,16 @@
                                 <td>- TOOLS</td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="vscode" src="/Recursos/vscode.png" alt="imagen VSCode" class="imagenProgramas">&nbsp VSCODE</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="vscode" src="Recursos/vscode.png" alt="imagen VSCode" class="imagenProgramas">&nbsp VSCODE</td>
+                                <td>&nbsp &nbsp<img src="Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="git" src="/Recursos/git.png" alt="imagen GIT" class="imagenProgramas">&nbsp GIT</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="git" src="Recursos/git.png" alt="imagen GIT" class="imagenProgramas">&nbsp GIT</td>
+                                <td>&nbsp &nbsp<img src="Recursos/100.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
-                                <td>&nbsp &nbsp<img id="nodeJS" src="/Recursos/nodeJS.png" alt="imagen NodeJS" class="imagenProgramas">&nbsp Node.JS</td>
-                                <td>&nbsp &nbsp<img src="/Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
+                                <td>&nbsp &nbsp<img id="nodeJS" src="Recursos/nodeJS.png" alt="imagen NodeJS" class="imagenProgramas">&nbsp Node.JS</td>
+                                <td>&nbsp &nbsp<img src="Recursos/90.png" alt="Barra de nivel" class="barraProgreso"></td>
                             </tr>
                             <tr>
                                 <td>&nbsp</td>
